style.css
@font-face {
  font-family: "Virgil";
  src: url("https://excalidraw.com/FG_Virgil.woff2");
}

*:focus {
  box-shadow: 0 0 0 2px var(--link-hover);
  outline: none;
}

nav {
  position: absolute;
  top: 0;
  width: 100%;
  display: flex;
  padding: 1em;
  position: sticky;
}

:root {
  --text: var(--oc-gray-7);
  --muted: var(--oc-gray-6);
  --link: var(--oc-blue-8);
  --link-hover: var(--oc-blue-9);
  --primary: var(--oc-lime-8);
  --primary-hover: var(--oc-lime-9);
  --vertical-padding: 32px;
  --horizontal-padding: 16px;
  --border-color: var(--oc-gray-4);
  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
}

* {
  font-family: var(--font-family);
  box-sizing: border-box;
}

html,
body {
  background-color: var(--oc-gray-0);
  color: var(--text);
  width: 100%;
  min-height: 100%;
}
main {
  flex-grow: 1;
}

header,
main,
footer {
  flex-shrink: 0;
}

.theme--dark {
  filter: invert(93%) hue-rotate(180deg);
}

.icon {
  border: none;
  background: none;
}

.content {
  width: 800px;
  max-width: 100%;
  margin: 0 auto;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

header {
  text-align: center;
  margin: 0 auto;
  max-width: 100%;
  width: 640px;
  padding: 0 var(--horizontal-padding);
}

footer {
  margin-top: 64px;
  height: 64px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-top: 1px solid var(--border-color);
  font-weight: 500;
}

.library {
  padding: var(--vertical-padding) var(--horizontal-padding);
  border-bottom: 1px solid var(--border-color);
}

.library img {
  float: right;
  max-height: 96px;
  max-width: 50%;
  margin-left: 8px;
  padding: 4px;
  border: 1px solid var(--border-color);
  border-radius: 2px;
}

.library h2 > a {
  visibility: hidden;
}

.library h2:hover > a {
  visibility: visible;
}

.library .downloads {
  font-weight: 600;
  margin: 8px 0;
  opacity: 0.8;
}

.library .authors {
  margin: 8px 0;
}

.library .updated {
  font-size: 0.7em;
  color: var(--muted);
  margin: 8px 0;
}

h1 {
  font-family: "Virgil", var(--font-family);
  font-size: 3em;
}

h2 {
  margin: 0;
}

.lead {
  font-size: 1.2em;
}

.small,
small {
  color: var(--muted);
  font-size: 0.8em;
  font-weight: 300;
}

a {
  font-weight: 500;
  text-decoration: none;
  color: var(--link);
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover);
}

input:focus {
  outline-offset: 0;
}

.actions {
  margin-top: 32px;
  display: flex;
  flex-wrap: wrap;
}

.btn {
  margin: 5px;
  margin-right: 12px;
  border: 1px solid var(--link);
  padding: 8px 16px;
  border-radius: 4px;
  white-space: nowrap;
}

.btn:hover {
  border-color: var(--link-hover);
  text-decoration: none;
  border-width: 2px;
  padding: 7px 15px;
}

.primary {
  color: var(--primary);
  font-size: 1.1em;
  font-weight: 600;
  border: 1px solid var(--primary);
}

.primary:hover {
  color: var(--primary-hover);
  border-color: var(--primary-hover);
}

#template {
  display: none;
}

#sort-template {
  display: none;
}

.option {
  color: var(--primary);
  cursor: pointer;
}

.option:hover {
  color: var(--primary-hover);
  text-decoration: underline;
}

.option-selected {
  color: var(--oc-gray-7);
  cursor: auto;
  pointer-events: none;
}

#theme {
  text-transform: capitalize;
  display: flex;
  margin-left: auto;
}

@media only screen and (max-width: 600px) {
  h1 {
    font-size: 2em;
  }
}

.icon {
  display: flex;
  user-select: none;
}
.icon svg {
  width: 1em;
  height: 1em;
  color: var(--text);
}

.is-hidden {
  display: none;
}

